# ytb_music_downloader

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  check_err.txt  docker-compose.yml  mh.json  search_output.json  test_print.txt
assets/: index.html
src/: config.rs  download.rs  logger.rs  main.rs  search.rs  state.rs
src/tui/: app.rs  ui.rs
src/web/: mod.rs  routes.rs  server.rs
